# hyperball

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish-validation.yml  publish.yml
examples/: README.md  distortion_vs_dimension.rs  graph_diagnostics.rs  hierarchy_recovery.rs  lorentz_basics.rs  lorentz_sgd.rs  poincare_sgd.rs  tree_embedding.rs
src/: core.rs  lib.rs  lorentz.rs
tests/: property_tests.proptest-regressions  property_tests.rs
