[package]
name = "hyp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Arc <attobop@gmail.com>"]
description = "Hyperbolic geometry: Poincare ball, Lorentz model, Mobius operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/hyp"
documentation = "https://docs.rs/hyp"
keywords = ["hyperbolic", "poincare", "lorentz", "embeddings", "geometry"]
categories = ["algorithms", "science", "mathematics"]

[dependencies]
ndarray = { version = "0.16", optional = true }
num-traits = "0.2"
thiserror = "2.0"
innr = { path = "../innr", version = "0.1.0", optional = true }

[dev-dependencies]
approx = "0.5"
proptest = "1.5"
rand = "0.9"
rand_chacha = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["ndarray"]
ndarray = ["dep:ndarray"]
simd = ["dep:innr"]

[[bench]]
name = "hyperbolic"
harness = false

[[example]]
name = "poincare_basics"
required-features = ["ndarray"]

[[example]]
name = "tree_embedding"
required-features = ["ndarray"]

[[example]]
name = "taxonomy_embedding"
required-features = ["ndarray"]

[[example]]
name = "hierarchy_recovery"
required-features = ["ndarray"]

[[example]]
name = "graph_diagnostics"

